correctly handle visibility on all attributes (closes #2072)
visibilities are now correctly handled on all attributes kind, especially for S

--- a/chrome/dcpOffline/content/bindings/system/dcpoffline-system-bindings.css
+++ b/chrome/dcpOffline/content/bindings/system/dcpoffline-system-bindings.css
@@ -260,6 +260,11 @@ dcpDocument[mode=edit] dcpAttribute[type=htmltext] {
         url("chrome://dcpoffline/content/bindings/system/leaf-attributes-edit.xml#htmltext-attr-edit");
 }
 
+dcpDocument[mode=edit] dcpAttribute[type=htmltext][visibility=S] {
+    -moz-binding:
+        url("chrome://dcpoffline/content/bindings/system/leaf-attributes-view.xml#htmltext-attr-view");
+}
+
 dcpDocument[mode=edit] dcpAttribute[type=int] {
     -moz-binding:
         url("chrome://dcpoffline/content/bindings/system/leaf-attributes-edit.xml#int-attr-edit");
